--- a/leden.html
+++ b/leden.html
@@ -63,7 +63,7 @@
 
           </div>
           <div class="lid-info">
-            <h1>Vista College</h1>
+            <h2>Vista College</h2>
             <h7>Valkenburgerweg</h7>
 
           </div>
@@ -74,7 +74,7 @@
 
           </div>
           <div class="lid-info">
-            <h1>Vista College</h1>
+            <h2>Vista College</h2>
             <h7>Valkenburgerweg</h7>
 
           </div>
@@ -85,152 +85,437 @@
 
           </div>
           <div class="lid-info">
-            <h1>Vista College</h1>
+            <h2>Vista College</h2>
             <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid1">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="./img/11111111.png" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h2>Vista College</h2>
+            <h7>Valkenburgerweg</h7>
 
           </div>
         </div>
