--- a/leden.html
+++ b/leden.html
@@ -59,34 +59,123 @@
       <div class="lid">
         <div class="lid1">
           <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/brightlands-logo.png?itok=EuJtbBjk" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
+            <h3>Brightlands Smart Services Campus</h3>
+            <h7>https://www.brightlands.com/ <br/>
+              Smedestraat 2 <br/>
+              6411 CR HEERLEN <br/>
+              Nederland</h7>
 
           </div>
         </div>
         <div class="lid2">
           <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/fontys.png?itok=hYUj5o2E" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
+            <h3>Fontys Hogeschool Techniek en Logistiek</h3>
+            <h7>https://fontys.nl/ <br/>
+              Tegelseweg 255 <br/>
+              5912 BG Venlo <br/>
+              Nederland</h7>
 
           </div>
         </div>
         <div class="lid3">
           <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/schermafbeelding_2018-02-01_om_16.38.54.png?itok=hP7OxM91" width="100%" height="100%">
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
+            <h3>Connect Solutions</h3>
+            <h7>http://www.connect-solutions.nl/<br/>
+              Europalaan 24 <br/>
+              6199 AB MAASTRICHT - AIRPORT <br/>
+              Nederland</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/schermafbeelding_2015-10-20_om_11.55.25.png?itok=8UZ5iR_a" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>AIESEC</h3>
+            <h7>www.aiesec.nl<br/>
+              EBonnefantenstraat 2 <br/>
+              6211 KL MAASTRICHT <br/>
+              Nederland</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/logoos.png?itok=BbKOEHuJ" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>Onesquad</h3>
+            <h7>Onesquad<br/>
+
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/sogeti.png?itok=gnbhOBSH" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>Sogeti</h3>
+            <h7>http://www.sogeti.nl<br/>
+              Australiëlaan 1 <br/>
+              Maastricht-Airport <br/>
+              Nederland</h7>
+
+          </div>
+        </div>
+        <div class="lid1">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/job-flow-logo-vector-242x120.png?itok=7x7Z_mXv" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>Job-Flow</h3>
+            <h7>http://www.connect-solutions.nl/<br/>
+              Wim Duisenbergplantsoen 27-31 <br/>
+              6221 SE Maastricht <br/>
+              Nederland</h7>
+
+          </div>
+        </div>
+        <div class="lid2">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/schermafbeelding_2018-08-20_om_15.31.08.png?itok=dKiyCtXe" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>Igor Brouwers</h3>
+            <h7>igorbrouwers.com<br/>
+              http://igorbrouwers.com/ <br/>
+
+          </div>
+        </div>
+        <div class="lid3">
+          <div class="lid-logo">
+            <img src="https://regitel.nl/sites/regitel.nl/files/styles/logo/public/logos/openline_0.png?itok=DHfkpwgH" width="100%" height="100%">
+
+          </div>
+          <div class="lid-info">
+            <h3>Open Line</h3>
+            <h7>http://www.openline.nl<br/>
+              ETon van der Bruggen <br/>
+              6199 AB MAASTRICHT - AIRPORT <br/>
+              Nederland</h7>
 
           </div>
         </div>
@@ -96,8 +185,11 @@
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
+            <h3>Connect Solutions</h3>
+            <h7>http://www.connect-solutions.nl/<br/>
+              Europalaan 24 <br/>
+              6199 AB MAASTRICHT - AIRPORT <br/>
+              Nederland</h7>
 
           </div>
         </div>
@@ -107,8 +199,12 @@
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
+            <h3>Connect Solutions</h3>
+            <h7>http://www.connect-solutions.nl/<br/>
+              Europalaan 24 <br/>
+              6199 AB MAASTRICHT - AIRPORT <br/>
+              Nederland</h7>
+
 
           </div>
         </div>
@@ -118,405 +214,11 @@
 
           </div>
           <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid1">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid2">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
-          </div>
-        </div>
-        <div class="lid3">
-          <div class="lid-logo">
-            <img src="./img/11111111.png" width="100%" height="100%">
-
-          </div>
-          <div class="lid-info">
-            <h2>Vista College</h2>
-            <h7>Valkenburgerweg</h7>
-
+            <h3>Connect Solutions</h3>
+            <h7>http://www.connect-solutions.nl/<br/>
+              Europalaan 24 <br/>
+              6199 AB MAASTRICHT - AIRPORT <br/>
+              Nederland</h7>
           </div>
         </div>
       </div>
