--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Regitel</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="popup/style2.css">
     <link
       href="https://fonts.googleapis.com/css?family=Quicksand&display=swap"
       rel="stylesheet"
@@ -88,5 +89,30 @@
         </div>
       </footer>
     </div>
+
+        <!-- Popup -->
+        <body2>
+
+          <div class="login-popup">
+             <div class="box">
+                <div class="img-area">
+                  <div class="img">
+                  </div>
+                  
+                </div>
+                <div class="form">
+                  <div class="close">&times;</div>
+                  <h1>Heeft u interesse om lid te worden?</h1>
+                  <a href="word_lid.html">
+                    <button type="button" class="btn">Klik Hier!</button>
+                  </a>
+                  </form>
+                </div>
+             </div>
+          </div>
+        
+        <script src="./popup/script.js"></script>
+        </body2>
+        <!--End popup-->
   </body>
 </html>
