--- a/nieuws.html
+++ b/nieuws.html
@@ -6,6 +6,7 @@
   <title>Nieuws</title>
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="stylesheet" href="./css/footerfix.css"/>
+  <link rel="stylesheet" href="popup/style2.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 </head>
@@ -78,6 +79,31 @@
         <a href="https://twitter.com/regitel">twitter</a></button>
       </div>
     </footer>
+
+        <!-- Popup -->
+        <body2>
+
+          <div class="login-popup">
+             <div class="box">
+                <div class="img-area">
+                  <div class="img">
+                  </div>
+                  
+                </div>
+                <div class="form">
+                  <div class="close">&times;</div>
+                  <h1>Heeft u interesse om lid te worden?</h1>
+                  <a href="word_lid.html">
+                    <button type="button" class="btn">Klik Hier!</button>
+                  </a>
+                  </form>
+                </div>
+             </div>
+          </div>
+        
+        <script src="./popup/script.js"></script>
+        </body2>
+        <!--End popup-->
 </body>
 
 
