--- a/contact.html
+++ b/contact.html
@@ -82,20 +82,19 @@
       <!-- Alleen mogelijk als het gehost word -->
       
       <footer class="footer">
-        <div class="contact-footer">
-          <h3>Contact</h3>
-          <a href="mailto:Regitel@gmail.com">Regitel@gmail.com</a>
-        </div>
-        <div class="locatie">
-          <h3>Locatie</h3>
-        </div>
-        <div class="links">
-          <h3>Links</h3>
-          <a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured">youtube</a></button><br>
-          <a href="https://www.instagram.com/regitel2020/">Instagram</a></button><br>
-          <a href="https://twitter.com/regitel">twitter</a></button>
-        </div>
-      </footer>ß
+        <ul>
+          <div class="social-media">
+            <div class="icons">
+              <li><a href="https://twitter.com/regitel"><img
+                src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+          <li><a href="https://www.linkedin.com/groups/75427/"><img
+                src="https://img.icons8.com/color/48/null/linkedin-2--v1.png"></a></li>
+          <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img
+                src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+            </div>
+          </div>
+        </ul>
+      </footer>
       <!--End container-->
     </div>
     <!--End content-->
