--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Home</title>
+  <title>Regitel</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/unicons.css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
@@ -87,7 +94,7 @@
         zijn. REGITEL is opgericht op 22 maart 1996 op initiatief van industriebank LIOF.
       </div>
 
-    <!----------------------------------------  Begin content  ---------------------------------------->
+      <!----------------------------------------  Begin content  ---------------------------------------->
       <!----------------------------------------  Begin Image-about  ---------------------------------------->
       <img class="img-about" src="img/Fotos/4.jpg" alt="Image about" />
     </div>
@@ -96,7 +103,7 @@
     <!----------------------------------------  End Content  ---------------------------------------->
 
     <!----------------------------------------  Start footer  ---------------------------------------->
-    
+
   </div>
   <footer class="footer">
     <ul>
