--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
     <div class="API">
       <div class="api1">
         <script src="js/news.js"></script>
+        <script src="js/admin.js"></script>
         Write()
       </div>
       <div class="api2">
+        <script src="js/admin1.php"></script>
         <!-- <script src="js/community-customers.js"></script> -->
       </div>
       <div class="api3">
