--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar">
       <input type="checkbox" id="nav-check">
       <div class="navbar-brand">
-        <img class="logo" src="./img/logo.png" alt="logo" />
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
       </div>
       <ul>
         <li class="active"><a class="link home" href="index.html">Home</a></li>
