--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <nav class="navbar">
       <input type="checkbox" id="nav-check">
       <div class="navbar-brand">
-        <img class="logo" src="./img/logo.png" alt="logo" />
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
       </div>
       <ul>
         <li><a class="link home" href="index.html">Home</a></li>
@@ -32,10 +32,14 @@
           <a class="link contact" href="./contact.html">Contact</a>
         </li>
         <li>
-          <a class="link word_lid" href="word_lid.html"><h4>Word Lid</h4></a>
+          <a class="link word_lid" href="word_lid.html">
+            <h4>Word Lid</h4>
+          </a>
         </li>
         <li>
-          <a class="link login" href="https://web.bundeling.com/login"><h4>Login</h4></a>
+          <a class="link login" href="https://web.bundeling.com/login">
+            <h4>Login</h4>
+          </a>
         </li>
       </ul>
       <!----------------------------------------  hamburger  ---------------------------------------->
@@ -61,11 +65,11 @@
         <div class="social-media">
           <div class="icons">
             <li><a href="https://twitter.com/regitel"><img
-              src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
-        <li><a href="https://www.linkedin.com/groups/75427/"><img
-              src="https://img.icons8.com/color/48/null/linkedin-2--v1.png"></a></li>
-        <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img
-              src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
+                  src="https://img.icons8.com/color/48/000000/twitter--v1.png"></a></li>
+            <li><a href="https://www.linkedin.com/groups/75427/"><img
+                  src="https://img.icons8.com/color/48/null/linkedin-2--v1.png"></a></li>
+            <li><a href="https://www.youtube.com/channel/UCw2weEXntCjk19g97SFFTcQ/featured"><img
+                  src="https://img.icons8.com/color/48/000000/youtube-play.png"></a></li>
           </div>
         </div>
       </ul>
