--- a/nieuws.html
+++ b/nieuws.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
       <input type="checkbox" id="nav-check">
       <div class="navbar-brand">
-        <img class="logo" src="./img/logo.png" alt="logo" />
+        <a href="index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
       </div>
       <ul>
         <li><a class="link home" href="index.html">Home</a></li>
